--- a/chaeking-api-hexagon/src/docs/asciidoc/notice.adoc
+++ b/chaeking-api-hexagon/src/docs/asciidoc/notice.adoc
@@ -1,14 +1,19 @@
 = 공지사항
+:doctype: book
+:icons: font
+:source-highlighter: highlightjs
+:toc: left
+:toc-title: API 명세서
+:toclevels: 4
 
-== 공지사항 조회
+== 공지사항 목록 조회
 
-공지사항을 조회하는 api입니다.
+공지사항 목록을 조회하는 api입니다.
 
 include::{snippets}/notices-get/http-request.adoc[]
 
 === Request Message
 
-.request parameters
 include::{snippets}/notices-get/request-parameters.adoc[]
 
 === 코드 예제
@@ -21,7 +26,29 @@ include::{snippets}/notices-get/curl-request.adoc[]
 
 === Response Message
 
-.response
+.response body
 include::{snippets}/notices-get/response-body.adoc[]
 
-***
+== 공지사항 단건 조회
+
+공지사항 id를 이용하여 공지사항 단건을 조회하는 api입니다.
+
+include::{snippets}/notice-get/http-request.adoc[]
+
+=== Request Message
+
+.path parameters
+include::{snippets}/notice-get/path-parameters.adoc[]
+
+=== 코드 예제
+
+.httpie 요청
+include::{snippets}/notice-get/httpie-request.adoc[]
+
+.curl 요청
+include::{snippets}/notice-get/curl-request.adoc[]
+
+=== Response Message
+
+.response body
+include::{snippets}/notice-get/response-body.adoc[]
