--- a/chaeking-api-hexagon/src/docs/asciidoc/faq.adoc
+++ b/chaeking-api-hexagon/src/docs/asciidoc/faq.adoc
@@ -3,10 +3,10 @@
 :icons: font
 :source-highlighter: highlightjs
 :toc: left
-:toc-title: API 명세서
+:toc-title: FAQ API
 :toclevels: 4
 
-== FAQ 조회 : `GET /v1/faqs`
+== FAQ 목록 조회
 
 FAQ를 조회하는 api입니다.
 
