--- a/chaeking-api-hexagon/src/docs/asciidoc/notice.adoc
+++ b/chaeking-api-hexagon/src/docs/asciidoc/notice.adoc
@@ -3,7 +3,7 @@
 :icons: font
 :source-highlighter: highlightjs
 :toc: left
-:toc-title: API 명세서
+:toc-title: 공지사항 API
 :toclevels: 4
 
 == 공지사항 목록 조회
